@@ -338,10 +338,12 @@
 
     <groupbox>
       <caption label="&style.stylesheets.label;"/>
+      <description>&style.deschelp;</description>
       <tree id="css-tree" rows="9" editable="true" seltype="single" hidecolumnpicker="true"
         onselect="GFcss.onselect();">
         <treecols>
           <treecol label="&style.tree.name;" primary="true" flex="1"/>
+          <treecol label="&style.tree.desc;"/>
           <treecol label="&style.tree.author;" width="100"/>
           <treecol label="&style.tree.enabled;" type="checkbox" editable="true"/>
         </treecols>
