@@ -13,6 +13,7 @@
       icons
     * Add page jumper to the bottom of the active messages list
     * Options to control where you're redirected to after QuickPosting
+    * Descriptions for stylesheets in the options window
 
 2008-09-21:
     * version 0.6.6
